...
  -->

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.pdf.ink.view.tool.AnnotationToolView
        android:id="@+id/pen_button"
        android:layout_width="@dimen/annotation_tool_width"
        android:layout_height="@dimen/annotation_tool_height"
        android:layout_marginEnd="@dimen/margin_4dp"
        android:contentDescription="@string/annotation_pen_button_content_desc"
        app:backgroundTint="@color/annotation_tool_background_color_state"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:icon="@drawable/pen_state_drawable"/>

    <androidx.pdf.ink.view.tool.AnnotationToolView
        android:id="@+id/highlighter_button"
        android:layout_width="@dimen/annotation_tool_width"
        android:layout_height="@dimen/annotation_tool_height"
        android:layout_marginEnd="@dimen/margin_4dp"
        android:contentDescription="@string/annotation_highlighter_button_content_desc"
        app:backgroundTint="@color/annotation_tool_background_color_state"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:icon="@drawable/highlighter_state_drawable"/>

    <androidx.pdf.ink.view.tool.AnnotationToolView
        android:id="@+id/eraser_button"
        android:layout_width="@dimen/annotation_tool_width"
        android:layout_height="@dimen/annotation_tool_height"
        android:layout_marginEnd="@dimen/margin_4dp"
        android:contentDescription="@string/annotation_eraser_button_content_desc"
        app:backgroundTint="@color/annotation_tool_background_color_state"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:icon="@drawable/eraser_drawable"/>

    <androidx.pdf.ink.view.tool.AnnotationToolView
        android:id="@+id/color_palette_button"
        android:layout_width="@dimen/annotation_tool_width"
        android:layout_height="@dimen/annotation_tool_height"
        android:layout_marginEnd="@dimen/margin_4dp"
        android:contentDescription="@string/annotation_color_palette_button_content_desc"
        app:cornerRadius="@dimen/color_palette_icon_corner_radius"
        app:backgroundTint="?attr/colorSurfaceContainerLowest"
...
        android:orientation="horizontal"
        android:focusable="false"
        android:background="@drawable/annotation_tool_container_background"
        android:layout_marginEnd="@dimen/margin_4dp">

        <androidx.pdf.ink.view.tool.AnnotationToolView
            android:id="@+id/undo_button"
            android:layout_width="@dimen/annotation_tool_width"
            android:layout_height="@dimen/annotation_tool_height"
            android:layout_marginEnd="@dimen/margin_4dp"
            android:contentDescription="@string/annotation_undo_button_content_desc"
            app:backgroundTint="@android:color/transparent"
            app:elevation="0dp"
            app:iconTint="?attr/colorOnSurfaceVariant"
            app:icon="@drawable/undo_drawable"/>

        <androidx.pdf.ink.view.tool.AnnotationToolView
            android:id="@+id/redo_button"
            android:layout_width="@dimen/annotation_tool_width"
            android:layout_height="@dimen/annotation_tool_height"
            android:contentDescription="@string/annotation_redo_button_content_desc"
            app:backgroundTint="@android:color/transparent"
            app:elevation="0dp"
            app:iconTint="?attr/colorOnSurfaceVariant"
            app:icon="@drawable/redo_drawable"/>
    </LinearLayout>

    <androidx.pdf.ink.view.tool.AnnotationToolView
        android:id="@+id/toggle_annotation_button"
        android:layout_width="@dimen/annotation_tool_width"
        android:layout_height="@dimen/annotation_tool_height"
        android:contentDescription="@string/annotation_toggle_annotation_button_content_desc"
        app:backgroundTint="@color/annotation_tool_background_color_state"
        app:iconTint="?attr/colorOnSurfaceVariant"
        app:icon="@drawable/hide_annotation_drawable"/>
...
